# Smart-LLM-Routing

./: .gitignore  README.md  architecture_diagram.md  design.md  pyproject.toml  requirements.txt
api_server/: __init__.py  dependencies.py  main.py  schemas.py
data_pipeline/: __init__.py  build_evaluator_dataset.py  collect_responses.py  generate_prompts.py
evaluation/: __init__.py  analyze_cost_quality.py  plots.ipynb
evaluator_model/: __init__.py  data.py  infer.py  losses.py  models.py  train.py
infra/: Dockerfile  config.example.env  docker-compose.yml
models/: CausalModel.py
router/: router.py
router_service/: __init__.py  config.py  pipeline.py  router.py
